# Vision-Based-Desktop-Automation-with-Dynamic-Icon-Grounding

./: Desktopauto.py  README.md  pyproject.toml
